# InstanceTrampoline

./: .gitignore  README.md
.github/workflows/: build.yml
InstanceTrampoline/: InstanceTrampoline.cs  InstanceTrampoline.csproj
Native/: CMakeLists.txt  JITBuffer.cpp  JITBuffer.h  NativeInterface.cpp  NativeTrampolineSystemVAarch64.h  Test.cpp  platform.h
